style.css
body{
    margin:0px;
    background-color:black;
    -webkit-user-select: none; /* Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+/Edge */
    user-select: none; /* Standard */
}

@font-face{
    font-family: calculator;
    src: url("digital-7.ttf");
}

#main-div{
    margin:auto;
    height:100vh;
    max-width:700px;
    width:100%;
    background-color:#fff9c4;
    color:#000000;
    display:flex;
    flex-wrap:wrap;
    border-radius:20px;
}

#screen{
    margin:2%;
    width:96%;
    height:35%;
    background-color:#fffff7;
    border-radius:15px;
    box-shadow: 3px 4px 6px 0px #62757f inset;
}

#button-container{
    width:96%;
    margin:2%;
    height:60%;
    background-color:#cbc693;
    display:flex;
    flex-wrap:wrap;
    justify-content:space-between;
    align-items:center;
    border-radius:10px;
}

.button{
    width:15%;
    height:16%;
    margin:1.8% 3%;
    display:flex;
    justify-content:center;
    align-items:center;
    font-family: calculator;
    font-size:86px;
    border-radius:15px;
}

.button:hover{
    animation-name:button-hover;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}

@keyframes button-hover {
    100% {background-color: #fff9c4;}
}

.important{
    color:#B00020;
}

.equals:hover{
    animation-name:equals-hover;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;
}

@keyframes equals-hover {
    100% {background-color:#B00020;
    color:#ffffff}
}

.operator, .equals{
    color:rgba(49, 27, 146, 0.7);
}

.operator:hover, .equals:hover{
    color:rgba(49, 27, 146, 1);
}

#equation{
    margin:15px 15px 15px 0px;
    width:98%;
    height:30%;
    border-radius:15px;
    display:flex;
    justify-content:flex-end;
    font-family: calculator;
    font-size:70px;
    color:rgba(0,0,255,0.7);
}

#answer{
    max-width:98%;
    width:98%;
    height:53%;
    border-radius:15px;
    position:relative;
    bottom: 10px;
    display:flex;
    flex-wrap:wrap;
    align-items: flex-end;
    word-wrap: break-word;
    justify-content: flex-end;
    font-family: calculator;
    font-size:120px;
}

#credit-container {
    color:#ffffff;
    position:absolute;
    bottom:0px;
}

#git-png{
    height:55px;
}

#name{
    display: inline;
    margin:5px;
}

a{
    text-decoration: none;
}

a:visited {
    color:white;
}

